Universal linker update

--- a/source/src/protocols_a.6.src.settings
+++ b/source/src/protocols_a.6.src.settings
@@ -44,6 +44,7 @@ sources = {
 		"TrigonalPlanarMetal_Helper",
 		"TrigonalPyramidalMetal_Helper",
 		"TMA_Helper",
+		"Universal_Helper"
 	],
 	"protocols/denovo_design" : [
 		"util",
